modify in medical record

--- a/assets/lang/en.json
+++ b/assets/lang/en.json
@@ -148,6 +148,7 @@
       "05:30 PM"
     ]
   },
+
   "rescheduleAppointment": {
     "title": "Reschedule Appointment",
     "reasonTitle": "Reason for Schedule Change",
@@ -600,6 +601,80 @@
     "selectPdf": "Select PDF",
     "fileSelected": "PDF Selected",
     "allFieldsRequired": "Issuer, Start Date, Type and PDF are required"
+  },
+  "allergiesPage": {
+    "activeAllergy": "Active Allergy",
+    "inactiveAllergy": "Inactive Allergy",
+    "unknownStatus": "Unknown Status",
+    "notApplicable": "N/A",
+    "invalidDate": "Invalid Date",
+    "unknownAllergy": "Unknown Allergy",
+    "allergy": "Allergy",
+    "last": "Last",
+    "onset": "Onset",
+    "yearsAbbreviation": "yrs",
+    "appointmentAllergies": "Appointment Allergies",
+    "filterAllergies": "Filter Allergies",
+    "noAllergiesRecorded": "No allergies recorded for this appointment.",
+    "allergyDetails": "Allergy Details",
+    "failedToLoadAllergyDetails": "Failed to load allergy details. Please try again.",
+    "tapToRetry": "Tap to retry",
+    "basicInformation": "Basic Information",
+    "type": "Type",
+    "category": "Category",
+    "clinicalStatus": "Clinical Status",
+    "verification": "Verification",
+    "onsetAge": "Onset Age",
+    "lastOccurrence": "Last Occurrence",
+    "notes": "Notes",
+    "reactions": "Reactions",
+    "viewAllReactions": "View All Reactions",
+    "encounterInformation": "Encounter Information",
+    "viewEncounterDetails": "View Encounter Details",
+    "reason": "Reason",
+    "date": "Date",
+    "specialNotes": "Special Notes",
+    "notSpecified": "Not specified",
+    "high": "High",
+    "moderate": "Moderate",
+    "low": "Low",
+    "noAllergiesFound": "No allergies found with current filters. Try adjusting your search.",
+    "refreshList": "Refresh List"
+  },
+  "reactionsPage": {
+    "filterReactions": "Filter Reactions",
+    "search": "Search",
+    "severity": "Severity",
+    "allSeverities": "All Severities",
+    "noSeveritiesAvailable": "No severities available",
+    "exposureRoute": "Exposure Route",
+    "allExposureRoutes": "All Exposure Routes",
+    "noExposureRoutesAvailable": "No exposure routes available",
+    "sortOrder": "Sort Order",
+    "default": "Default",
+    "oldestFirst": "Oldest First",
+    "newestFirst": "Newest First",
+    "unknown": "Unknown",
+    "notApplicable": "N/A",
+    "invalidDate": "Invalid Date",
+    "unknownReaction": "Unknown Reaction",
+    "substance": "Substance",
+    "exposure": "Exposure",
+    "onset": "Onset",
+    "description": "Description",
+    "notes": "Notes",
+    "notSpecified": "Not specified",
+    "mild": "Mild",
+    "moderate": "Moderate",
+    "severe": "Severe",
+    "reactionDetails": "Reaction Details",
+    "failedToLoadReactionDetails": "Failed to load reaction details",
+    "basicInformation": "Basic Information",
+    "allergyReactions": "Allergy Reactions",
+    "noReactionsRecorded": "No reactions recorded for this allergy and appointment.",
+    "tapToRefresh": "Tap to refresh",
+    "apply": "Apply",
+    "cancel": "Cancel",
+    "clearFilters": "Clear filters"
   }
-
 }
