--- a/assets/lang/ar.json
+++ b/assets/lang/ar.json
@@ -348,10 +348,14 @@
     "welcome": "مرحباً بك !"
   },
   "homePage": {
-    "header": {
-      "greeting": "صباح الخير",
-      "userName": "أندرو إينسلي"
-    },
+    "category_patients": "المرضى",
+    "category_doctor_schedule": "جدول الطبيب",
+    "category_appointments": "المواعيد",
+    "category_previous_appointments": "المواعيد السابقة",
+    "category_clinics": "العيادات",
+    "category_articles": "المقالات",
+    "app_name_text": "مدي زين دكتور"
+  },
     "specialties": {
       "title": "تخصصات الأطباء",
       "seeAll": "عرض الكل",
@@ -365,8 +369,7 @@
         "radiology": "الأشعة",
         "more": "المزيد"
       }
-    }
-  },
+    },
   "definitionWidget": {
     "early_protection": "حماية مبكرة لصحة عائلتك",
     "your_journey": "تبدأ رحلتك نحو صحة أفضل هنا.",
@@ -411,9 +414,7 @@
     "profile": "الملف الشخصي",
     "changeLanguage": "تغيير اللغة"
   },
-  "servicesPage": {
-    "title": "الخدمات الصحية"
-  },
+
   "clinicCard": {
     "seeDetails": "عرض التفاصيل >"
   },
@@ -667,5 +668,225 @@
     "addCommunicationPreferences": "أضف طرق اتصال جديدة لترى ما تفضله هنا.",
     "preferred": "مفضل",
     "unknownLanguage": "لغة غير معروفة"
+  },
+  "patientPage": {
+    "patients": "المرضى",
+    "no_patients_found": "لم يتم العثور على مرضى",
+    "no_name": "بلا اسم",
+    "email": "البريد الإلكتروني",
+    "gender": "النوع",
+    "marital_status": "الحالة الاجتماعية",
+    "age": "العمر",
+    "years": " سنة",
+    "status": "الحالة",
+    "active": "نشط",
+    "inactive": "غير نشط",
+    "deceased": "متوفى",
+    "yes": "نعم",
+    "no": "لا",
+    "health_information": "المعلومات الصحية",
+    "medical_details": "التفاصيل الطبية",
+    "blood_type": "فصيلة الدم: ",
+    "height": "الطول: ",
+    "cm": " سم",
+    "weight": "الوزن: ",
+    "kg": " كجم",
+    "smoker": "مدخن: ",
+    "alcohol_drinker": "متعاطي الكحول: ",
+    "contact_information": "معلومات الاتصال",
+    "medical_record": "السجل الطبي",
+    "telecom": "الاتصال",
+    "address": "العنوان",
+    "deactivate": "تعطيل",
+    "activate": "تفعيل",
+    "mark_alive": "تحديد كحي",
+    "mark_deceased": "تحديد كمتوفى",
+    "na": "غير متوفر",
+    "address_page_title": "العنوان",
+    "no_addresses_found": "لا توجد أي عناوين",
+    "from": "من",
+    "to": "إلى",
+    "continue": " مستمر",
+    "filter_patients": "تصفية المرضى",
+    "search": "بحث",
+    "dob_range": "نطاق تاريخ الميلاد",
+    "min_date": "أدنى تاريخ",
+    "max_date": "أقصى تاريخ",
+    "clear": "مسح",
+    "cancel": "إلغاء",
+    "apply": "تطبيق",
+    "edit_patient_details": "تعديل تفاصيل المريض",
+    "additional_text": "نص إضافي",
+    "family_name": "اسم العائلة",
+    "given_name": "الاسم الأول",
+    "prefix": "بادئة",
+    "suffix": "لاحقة",
+    "date_of_birth": "تاريخ الميلاد",
+    "height_cm": "الطول (سم)",
+    "weight_kg": "الوزن (كجم)",
+    "smoker_toggle": "مدخن",
+    "alcohol_drinker_toggle": "متعاطي الكحول",
+    "gender_dropdown": "النوع",
+    "marital_status_dropdown": "الحالة الاجتماعية",
+    "blood_type_dropdown": "فصيلة الدم",
+    "save_changes": "حفظ التغييرات",
+    "please_enter": "الرجاء إدخال ",
+    "please_select": "الرجاء اختيار ",
+    "error_loading": "خطأ في تحميل ",
+    "no_data_available": "لا توجد بيانات متاحة",
+    "all_fields_required": "جميع الحقول مطلوبة.",
+    "dob_short": "تاريخ الميلاد",
+    "telecoms": "وسائل الاتصال",
+    "no_telecoms_of_type": "لم يتم العثور على وسائل اتصال لهذا النوع.",
+    "not_available": "غير متوفر",
+    "telecom_details": "تفاصيل الاتصال",
+    "value_label": "القيمة",
+    "type_label": "النوع",
+    "use_label": "الاستخدام",
+    "start_date_label": "تاريخ البدء",
+    "end_date_label": "تاريخ الانتهاء"
+
+
+  },
+  "appointmentPage": {
+    "patient_appointments_title": "مواعيد المريض",
+    "my_appointments_title": "مواعيدي",
+    "filter_appointments_tooltip": "تصفية المواعيد",
+    "no_appointments_found_title": "لم يتم العثور على مواعيد!",
+    "no_appointments_found_tip": "عدّل فلاتر البحث أو حاول مرة أخرى لاحقًا.",
+    "no_reason_specified": "لم يتم تحديد سبب",
+    "status_label": "الحالة",
+    "not_specified": "غير محدد",
+    "start_date_label": "تاريخ البدء",
+    "not_available": "غير متوفر",
+    "patient_label": "المريض",
+    "appointment_details_title": "تفاصيل الموعد",
+    "back_tooltip": "رجوع",
+    "finished_appointment_tooltip": "وضع علامة 'مكتمل'",
+    "error_occurred_loading_details": "حدث خطأ أثناء تحميل تفاصيل الموعد:",
+    "retry_button": "إعادة المحاولة",
+    "no_specific_reason_for_appointment": "لا يوجد سبب محدد لهذا الموعد",
+    "type_label": "النوع",
+    "duration_label": "المدة",
+    "minute_label": "دقيقة",
+    "patient_not_available": "المريض غير متوفر",
+    "patient_role_label": "المريض",
+    "patient_identifier_unavailable": "معرف المريض غير متوفر.",
+    "doctor_not_available": "الطبيب غير متوفر",
+    "doctor_role_label": "الطبيب",
+    "no_notes_provided_for_appointment": "لم يتم تقديم ملاحظات لهذا الموعد.",
+    "cancellation_date_label": "تاريخ الإلغاء",
+    "reason_for_cancellation_label": "سبب الإلغاء",
+    "complete_appointment_dialog_title": "إكمال الموعد",
+    "complete_appointment_dialog_content": "هل أنت متأكد من أنك تريد وضع علامة 'مكتمل' على هذا الموعد؟",
+    "complete_dialog_button": "إكمال",
+    "details_section_header": "تفاصيل الموعد",
+    "participants_section_header": "المشاركون",
+    "notes_section_header": "ملاحظات",
+    "cancel_section_header": "معلومات الإلغاء",
+    "created_by_section_header": "تم الإنشاء بواسطة",
+
+    "filter_appointments_dialog_title": "تصفية المواعيد",
+    "close_filters_tooltip": "إغلاق الفلاتر",
+    "basic_filters_section_header": "الفلاتر الأساسية",
+    "search_by_keyword_label": "البحث بالكلمة المفتاحية",
+    "search_keyword_hint": "مثال: سبب، اسم المريض",
+    "doctor_id_label": "معرف الطبيب",
+    "doctor_id_hint": "أدخل معرف الطبيب (رقمي)",
+    "patient_id_label": "معرف المريض",
+    "patient_id_hint": "أدخل معرف المريض (رقمي)",
+    "clinic_id_label": "معرف العيادة",
+    "clinic_id_hint": "أدخل معرف العيادة (رقمي)",
+    "appointment_type_section_header": "نوع الموعد",
+    "all_types_option": "جميع الأنواع",
+    "error_loading_types": "خطأ في تحميل الأنواع:",
+    "appointment_status_section_header": "حالة الموعد",
+    "all_statuses_option": "جميع الحالات",
+    "error_loading_statuses": "خطأ في تحميل الحالات:",
+    "doctor_options_section_header": "خيارات الطبيب",
+    "created_by_current_doctor_switch": "تم الإنشاء بواسطة الطبيب الحالي",
+    "appointment_dates_section_header": "تواريخ المواعيد",
+    "start_date_range_label": "نطاق تاريخ البدء",
+    "min_start_date_label": "أدنى تاريخ بدء",
+    "max_start_date_label": "أقصى تاريخ بدء",
+    "end_date_range_label": "نطاق تاريخ الانتهاء",
+    "min_end_date_label": "أدنى تاريخ انتهاء",
+    "max_end_date_label": "أقصى تاريخ انتهاء",
+    "cancellation_date_range_label": "نطاق تاريخ الإلغاء",
+    "min_cancel_date_label": "أدنى تاريخ إلغاء",
+    "max_cancel_date_label": "أقصى تاريخ إلغاء",
+    "sort_order_section_header": "ترتيب الفرز",
+    "sort_asc_button": "تصاعدي",
+    "sort_des_button": "تنازلي",
+    "apply_filters_button": "تطبيق الفلاتر",
+    "reset_button": "إعادة تعيين",
+    "end_date_label": "تاريخ الانتهاء",
+    "appointment_status_updated_success": "تم تحديث حالة الموعد بنجاح!",
+    "dialog_cancel_button": "إلغاء"
+  },
+  "schedulePage": {
+    "my_schedules_title": "جدول أعمالي",
+    "no_schedules_found": "لم يتم العثور على جداول!",
+    "create_new_schedule": "إنشاء جدول جديد",
+    "add_schedule_tooltip": "إضافة جدول",
+    "schedule_details_title": "تفاصيل الجدول",
+    "failed_to_load_schedule_title": "فشل تحميل الجدول",
+    "error_occurred_try_again": "حدث خطأ: {error_message}. الرجاء المحاولة مرة أخرى.",
+    "retry_loading_button": "إعادة تحميل",
+    "no_data_available": "لا توجد بيانات متاحة",
+    "status_active": "نشط",
+    "status_inactive": "غير نشط",
+    "schedule_information_header": "معلومات الجدول",
+    "planning_period_label": "فترة التخطيط",
+    "repeat_pattern_label": "نمط التكرار",
+    "time_label": "الوقت",
+    "duration_label": "المدة",
+    "hours_unit": "ساعة",
+    "comment_label": "تعليق",
+    "edit_schedule_button": "تعديل الجدول",
+    "view_vacations_button": "عرض الإجازات",
+    "filter_schedules_title": "تصفية الجداول",
+    "close_filters_tooltip": "إغلاق الفلاتر",
+    "search_by_name_label": "البحث بالاسم",
+    "search_by_name_hint": "مثال: جدول الربع الثاني، قائمة العطلات",
+    "planning_horizon_filter_label": "أفق التخطيط",
+    "start_date_filter_label": "تاريخ البدء",
+    "end_date_filter_label": "تاريخ الانتهاء",
+    "select_date_placeholder": "اختر تاريخ",
+    "status_filter_label": "الحالة",
+    "status_active_option": "نشط",
+    "status_inactive_option": "غير نشط",
+    "all_statuses_option": "جميع الحالات",
+    "apply_filters_button": "تطبيق الفلاتر",
+    "cancel_button": "إلغاء",
+    "clear_all_button": "مسح الكل",
+    "create_new_schedule_form_title": "إنشاء جدول جديد",
+    "edit_schedule_form_title": "تعديل الجدول",
+    "schedule_created_success_message": "تم إنشاء الجدول بنجاح!",
+    "schedule_updated_success_message": "تم تحديث الجدول بنجاح!",
+    "error_prefix": "خطأ: ",
+    "schedule_name_form_label": "اسم الجدول",
+    "schedule_name_form_hint": "مثال: استشارات صباحية",
+    "schedule_name_validation_message": "الرجاء إدخال اسم للجدول",
+    "planning_horizon_form_header": "أفق التخطيط",
+    "start_date_form_label": "تاريخ البدء",
+    "end_date_form_label": "تاريخ الانتهاء",
+    "repeat_pattern_form_header": "نمط التكرار",
+    "days_of_week_form_label": "أيام الأسبوع",
+    "day_sun_short": "أح",
+    "day_mon_short": "إث",
+    "day_tue_short": "ثل",
+    "day_wed_short": "أر",
+    "day_thu_short": "خم",
+    "day_fri_short": "جم",
+    "day_sat_short": "سب",
+    "start_time_form_label": "وقت البدء",
+    "duration_form_label": "المدة: {duration} {unit}",
+    "hour_singular": "ساعة",
+    "hour_plural": "ساعات",
+    "comment_form_label": "تعليق (اختياري)",
+    "comment_form_hint": "أضف أي ملاحظات خاصة لهذا الجدول",
+    "create_schedule_form_button": "إنشاء جدول",
+    "update_schedule_form_button": "تحديث الجدول"
   }
 }
