--- a/assets/lang/en.json
+++ b/assets/lang/en.json
@@ -349,10 +349,14 @@
     "welcome":"Welcome!"
   },
   "homePage": {
-    "header": {
-      "greeting": "Good morning",
-      "userName": "Andrew Ainsley"
-    },
+    "category_patients": "Patients",
+    "category_doctor_schedule": "Doctor Schedule",
+    "category_appointments": "Appointments",
+    "category_previous_appointments": "Previous Appointments",
+    "category_clinics": "Clinics",
+    "category_articles": "Articles",
+    "app_name_text": "MediZen Doctor"
+  },
     "specialties": {
       "title": "Doctor Speciality",
       "seeAll": "See all",
@@ -366,8 +370,7 @@
         "radiology": "Radiology",
         "more": "More"
       }
-    }
-  },
+    },
   "definitionWidget": {
     "early_protection": "Early protection for your family health",
     "your_journey": "Your journey to a healthier you starts here.",
@@ -412,9 +415,7 @@
     "profile": "My Profile",
     "changeLanguage": "Change Language"
   },
-  "servicesPage": {
-    "title": "Health Services"
-  },
+
   "clinicCard": {
     "seeDetails": "See Details >"
   },"clinic": {
@@ -668,5 +669,224 @@
     "addCommunicationPreferences": "Add new communication preferences to see them here.",
     "preferred": "Preferred",
     "unknownLanguage": "Unknown Language"
+  },
+  "patientPage": {
+    "patients": "Patients",
+    "no_patients_found": "No patients found",
+    "no_name": "No name",
+    "email": "Email",
+    "gender": "Gender",
+    "marital_status": "Marital Status",
+    "age": "Age",
+    "years": " years",
+    "status": "Status",
+    "active": "Active",
+    "inactive": "Inactive",
+    "deceased": "Deceased",
+    "yes": "Yes",
+    "no": "No",
+    "health_information": "Health Information",
+    "medical_details": "Medical Details",
+    "blood_type": "Blood Type: ",
+    "height": "Height: ",
+    "cm": " cm",
+    "weight": "Weight: ",
+    "kg": " kg",
+    "smoker": "Smoker: ",
+    "alcohol_drinker": "Alcohol Drinker: ",
+    "contact_information": "Contact Information",
+    "medical_record": "Medical record",
+    "telecom": "Telecom",
+    "address": "Address",
+    "deactivate": "Deactivate",
+    "activate": "Activate",
+    "mark_alive": "Mark Alive",
+    "mark_deceased": "Mark Deceased",
+    "na": "N/A",
+    "address_page_title": "Address",
+    "no_addresses_found": "There are not any addresses",
+    "from": "From",
+    "to": "to",
+    "continue": " continue",
+    "filter_patients": "Filter Patients",
+    "search": "Search",
+    "dob_range": "Date of Birth Range",
+    "min_date": "Min Date",
+    "max_date": "Max Date",
+    "clear": "Clear",
+    "cancel": "Cancel",
+    "apply": "Apply",
+    "edit_patient_details": "Edit Patient Details",
+    "additional_text": "Additional Text",
+    "family_name": "Family Name",
+    "given_name": "Given Name",
+    "prefix": "Prefix",
+    "suffix": "Suffix",
+    "date_of_birth": "Date of Birth",
+    "height_cm": "Height (cm)",
+    "weight_kg": "Weight (kg)",
+    "smoker_toggle": "Smoker",
+    "alcohol_drinker_toggle": "Alcohol Drinker",
+    "gender_dropdown": "Gender",
+    "marital_status_dropdown": "Marital Status",
+    "blood_type_dropdown": "Blood Type",
+    "save_changes": "Save Changes",
+    "please_enter": "Please enter ",
+    "please_select": "Please select ",
+    "error_loading": "Error loading ",
+    "no_data_available": "No data available",
+    "all_fields_required": "All fields are required.",
+    "dob_short": "DOB",
+    "telecoms": "Telecoms",
+    "no_telecoms_of_type": "No telecoms found for this type.",
+    "not_available": "N/A",
+    "telecom_details": "Telecom Details",
+    "value_label": "Value",
+    "type_label": "Type",
+    "use_label": "Use",
+    "start_date_label": "Start Date",
+    "end_date_label": "End Date"
+
+  },
+  "appointmentPage": {
+    "patient_appointments_title": "Patient Appointments",
+    "my_appointments_title": "My Appointments",
+    "filter_appointments_tooltip": "Filter appointments",
+    "no_appointments_found_title": "No appointments found!",
+    "no_appointments_found_tip": "Adjust your filters or try again later.",
+    "no_reason_specified": "No reason specified",
+    "status_label": "Status",
+    "not_specified": "Not specified",
+    "start_date_label": "Start Date",
+    "not_available": "N/A",
+    "patient_label": "Patient",
+    "appointment_details_title": "Appointment Details",
+    "back_tooltip": "Back",
+    "finished_appointment_tooltip": "Mark as Finished",
+    "error_occurred_loading_details": "An error occurred while loading appointment details:",
+    "retry_button": "Retry",
+    "no_specific_reason_for_appointment": "No specific reason for this appointment",
+    "type_label": "Type",
+    "duration_label": "Duration",
+    "minute_label": "min",
+    "patient_not_available": "Patient not available",
+    "patient_role_label": "Patient",
+    "patient_identifier_unavailable": "Patient identifier unavailable.",
+    "doctor_not_available": "Doctor not available",
+    "doctor_role_label": "Doctor",
+    "no_notes_provided_for_appointment": "No notes provided for this appointment.",
+    "cancellation_date_label": "Cancellation Date",
+    "reason_for_cancellation_label": "Reason for Cancellation",
+    "complete_appointment_dialog_title": "Complete Appointment",
+    "complete_appointment_dialog_content": "Are you sure you want to mark this appointment as 'Finished'?",
+    "complete_dialog_button": "Complete",
+    "details_section_header": "Appointment Details",
+    "participants_section_header": "Participants",
+    "notes_section_header": "Notes",
+    "cancel_section_header": "Cancellation Info",
+    "created_by_section_header": "Created By",
+
+    "filter_appointments_dialog_title": "Filter appointments",
+    "close_filters_tooltip": "Close filters",
+    "basic_filters_section_header": "Basic Filters",
+    "search_by_keyword_label": "Search by keyword",
+    "search_keyword_hint": "ex: reason, patient name",
+    "doctor_id_label": "Doctor ID",
+    "doctor_id_hint": "Enter doctor ID (numeric)",
+    "patient_id_label": "Patient ID",
+    "patient_id_hint": "Enter patient ID (numeric)",
+    "clinic_id_label": "Clinic ID",
+    "clinic_id_hint": "Enter clinic ID (numeric)",
+    "appointment_type_section_header": "Appointment type",
+    "all_types_option": "All types",
+    "error_loading_types": "Error loading types:",
+    "appointment_status_section_header": "Appointment status",
+    "all_statuses_option": "All statuses",
+    "error_loading_statuses": "Error loading statuses:",
+    "doctor_options_section_header": "Doctor options",
+    "created_by_current_doctor_switch": "Created by current doctor",
+    "appointment_dates_section_header": "Appointment dates",
+    "start_date_range_label": "Start date range",
+    "min_start_date_label": "Min start date",
+    "max_start_date_label": "Max start date",
+    "end_date_range_label": "End date range",
+    "min_end_date_label": "Minimum end date",
+    "max_end_date_label": "Max end date",
+    "cancellation_date_range_label": "Cancellation date range",
+    "min_cancel_date_label": "Min cancel date",
+    "max_cancel_date_label": "Max cancel date",
+    "sort_order_section_header": "Sort order",
+    "sort_asc_button": "Asc",
+    "sort_des_button": "Des",
+    "apply_filters_button": "Apply filters",
+    "reset_button": "Reset",
+    "end_date_label": "End Date",
+    "appointment_status_updated_success": "Appointment status updated successfully!",
+    "dialog_cancel_button": "Cancel"
+  },
+  "schedulePage": {
+    "my_schedules_title": "My Schedules",
+    "no_schedules_found": "No schedules found!",
+    "create_new_schedule": "Create New Schedule",
+    "add_schedule_tooltip": "Add Schedule",
+    "schedule_details_title": "Schedule Details",
+    "failed_to_load_schedule_title": "Failed to Load Schedule",
+    "error_occurred_try_again": "An error occurred: {error_message}. Please try again.",
+    "retry_loading_button": "Retry Loading",
+    "no_data_available": "No data available",
+    "status_active": "Active",
+    "status_inactive": "Inactive",
+    "schedule_information_header": "Schedule Information",
+    "planning_period_label": "Planning Period",
+    "repeat_pattern_label": "Repeat Pattern",
+    "time_label": "Time",
+    "duration_label": "Duration",
+    "hours_unit": "hours",
+    "comment_label": "Comment",
+    "edit_schedule_button": "Edit Schedule",
+    "view_vacations_button": "View Vacations",
+    "filter_schedules_title": "Filter Schedules",
+    "close_filters_tooltip": "Close Filters",
+    "search_by_name_label": "Search by Name",
+    "search_by_name_hint": "e.g., Q2 Schedule, Holiday Roster",
+    "planning_horizon_filter_label": "Planning Horizon",
+    "start_date_filter_label": "Start Date",
+    "end_date_filter_label": "End Date",
+    "select_date_placeholder": "Select Date",
+    "status_filter_label": "Status",
+    "status_active_option": "Active",
+    "status_inactive_option": "Inactive",
+    "all_statuses_option": "All Statuses",
+    "apply_filters_button": "Apply Filters",
+    "cancel_button": "Cancel",
+    "clear_all_button": "Clear All",
+    "create_new_schedule_form_title": "Create New Schedule",
+    "edit_schedule_form_title": "Edit Schedule",
+    "schedule_created_success_message": "Schedule created successfully!",
+    "schedule_updated_success_message": "Schedule updated successfully!",
+    "error_prefix": "Error: ",
+    "schedule_name_form_label": "Schedule Name",
+    "schedule_name_form_hint": "e.g., Morning Consultations",
+    "schedule_name_validation_message": "Please enter a schedule name",
+    "planning_horizon_form_header": "Planning Horizon",
+    "start_date_form_label": "Start Date",
+    "end_date_form_label": "End Date",
+    "repeat_pattern_form_header": "Repeat Pattern",
+    "days_of_week_form_label": "Days of Week",
+    "day_sun_short": "SUN",
+    "day_mon_short": "MON",
+    "day_tue_short": "TUE",
+    "day_wed_short": "WED",
+    "day_thu_short": "THU",
+    "day_fri_short": "FRI",
+    "day_sat_short": "SAT",
+    "start_time_form_label": "Start Time",
+    "duration_form_label": "Duration: {duration} {unit}",
+    "hour_singular": "hour",
+    "hour_plural": "hours",
+    "comment_form_label": "Comment (optional)",
+    "comment_form_hint": "Add any specific notes for this schedule",
+    "create_schedule_form_button": "Create Schedule",
+    "update_schedule_form_button": "Update Schedule"
   }
 }
