--- a/assets/lang/ar.json
+++ b/assets/lang/ar.json
@@ -1200,28 +1200,29 @@
   },
 
   "allergyFormPage": {
-    "addAllergyTitle": "إضافة حساسية",
-    "editAllergyTitle": "تعديل الحساسية",
-    "allergyNameLabel": "اسم الحساسية",
-    "allergyNameRequiredError": "اسم الحساسية مطلوب",
-    "typeLabel": "النوع",
-    "clinicalStatusLabel": "الحالة السريرية",
-    "verificationStatusLabel": "حالة التحقق",
-    "categoryLabel": "الفئة",
-    "criticalityLabel": "الأهمية/الخطورة",
-    "onsetAgeLabel": "عمر البدء",
+    "appBarTitleAdd": "إضافة حساسية",
+    "appBarTitleEdit": "تعديل حساسية",
+    "allergyNameLabel": "اسم الحساسية*",
+    "allergyNameRequired": "اسم الحساسية مطلوب",
+    "typeLabel": "النوع*",
+    "clinicalStatusLabel": "الحالة السريرية*",
+    "verificationStatusLabel": "حالة التحقق*",
+    "categoryLabel": "الفئة*",
+    "criticalityLabel": "الحرجية*",
+    "encounterLabel": "المواجهة",
+    "noReason": "لا يوجد سبب",
+    "unknownType": "نوع غير معروف",
+    "onsetAgeLabel": "عمر البداية",
     "yearsSuffix": "سنوات",
     "lastOccurrenceLabel": "آخر حدوث",
-    "discoveredDuringEncounterToggle": "اكتشفت خلال الزيارة",
+    "discoveredDuringEncounter": "اكتشف خلال هذه المواجهة؟",
     "notesLabel": "ملاحظات",
-    "saveAllergyButton": "حفظ الحساسية",
-    "updateAllergyButton": "تحديث الحساسية",
-    "requiredFieldError": "مطلوب",
-    "encounterLabel": "الزيارة",
-    "noReason": "لا يوجد سبب",
-    "unknownReason": "سبب غير معروف",
-    "unknownDate": "تاريخ غير معروف",
-    "errorLoadingEncounters": "خطأ في تحميل الزيارات: {error}"
+    "saveAllergy": "حفظ الحساسية",
+    "updateAllergy": "تحديث الحساسية",
+    "errorLoadingEncounters": "خطأ في تحميل المواجهات: {0}",
+    "fieldRequired": "{0} مطلوب",
+    "allergyCreatedSuccess": "تم إنشاء الحساسية بنجاح",
+    "allergyUpdatedSuccess": "تم تحديث الحساسية بنجاح"
   },
   "reactionDetailsPage": {
     "title": "تفاصيل الحساسية",
