--- a/assets/lang/en.json
+++ b/assets/lang/en.json
@@ -1203,29 +1203,29 @@
   },
 
   "allergyFormPage": {
-    "addAllergyTitle": "Add Allergy",
-    "editAllergyTitle": "Edit Allergy",
-    "allergyNameLabel": "Allergy Name",
-    "allergyNameRequiredError": "Allergy name is required",
-    "typeLabel": "Type",
-    "clinicalStatusLabel": "Clinical Status",
-    "verificationStatusLabel": "Verification Status",
-    "categoryLabel": "Category",
-    "criticalityLabel": "Criticality",
+    "appBarTitleAdd": "Add Allergy",
+    "appBarTitleEdit": "Edit Allergy",
+    "allergyNameLabel": "Allergy Name*",
+    "allergyNameRequired": "Allergy name is required",
+    "typeLabel": "Type*",
+    "clinicalStatusLabel": "Clinical Status*",
+    "verificationStatusLabel": "Verification Status*",
+    "categoryLabel": "Category*",
+    "criticalityLabel": "Criticality*",
+    "encounterLabel": "Encounter",
+    "noReason": "No reason",
+    "unknownType": "Unknown type",
     "onsetAgeLabel": "Onset Age",
     "yearsSuffix": "years",
     "lastOccurrenceLabel": "Last Occurrence",
-    "discoveredDuringEncounterToggle": "Discovered During Encounter",
+    "discoveredDuringEncounter": "Discovered during this encounter?",
     "notesLabel": "Notes",
-    "saveAllergyButton": "Save Allergy",
-    "updateAllergyButton": "Update Allergy",
-    "requiredFieldError": "is required",
-    "encounterLabel": "Encounter",
-    "noReason": "No reason",
-    "unknownReason": "Unknown reason",
-    "unknownDate": "Unknown date",
-    "errorLoadingEncounters": "Error loading encounters: {error}"
-  },
+    "saveAllergy": "Save Allergy",
+    "updateAllergy": "Update Allergy",
+    "errorLoadingEncounters": "Error loading encounters: {0}",
+    "fieldRequired": "{0} is required",
+    "allergyCreatedSuccess": "Allergy created successfully",
+    "allergyUpdatedSuccess": "Allergy updated successfully"},
   "reactionDetailsPage": {
     "title": "Reaction Details",
     "editButton": "Edit",
