--- a/assets/lang/ar.json
+++ b/assets/lang/ar.json
@@ -2087,6 +2087,84 @@
     "yes": "نعم",
     "no": "لا",
     "notAvailable": "غير متاح"
+  },
+  "diagnosticReportList": {
+    "diagnosticReport_noReportsFound": "لم يتم العثور على تقارير تشخيصية",
+    "diagnosticReport_tapToRefresh": "يبدو أن لا توجد تقارير تشخيصية. انقر للتحديث.",
+    "diagnosticReport_refresh": "تحديث",
+    "diagnosticReport_unnamedReport": "تقرير غير مسمى",
+    "diagnosticReport_note": "ملاحظة",
+    "diagnosticReport_condition": "الحالة",
+    "diagnosticReport_unknownCondition": "حالة غير معروفة",
+    "diagnosticReport_clinicalStatus": "الحالة السريرية",
+    "diagnosticReport_verificationStatus": "حالة التحقق",
+    "diagnosticReport_bodySite": "موقع الجسم",
+    "diagnosticReport_stage": "المرحلة",
+    "diagnosticReport_onset_date": "تاريخ البدء",
+    "diagnosticReport_conclusion": "الخلاصة",
+    "diagnosticReport_reportStatus": "حالة التقرير"
+  },
+  "diagnosticDetailsPage": {
+    "diagnosticReportDetails_pageTitle": "تفاصيل التقرير التشخيصي",
+    "diagnosticReportDetails_failedToLoadReport": "فشل تحميل التقرير",
+    "diagnosticReportDetails_retry": "إعادة المحاولة",
+    "diagnosticReportDetails_unknownReport": "تقرير غير معروف",
+    "diagnosticReportDetails_overview": "نظرة عامة",
+    "diagnosticReportDetails_reportName": "اسم التقرير",
+    "diagnosticReportDetails_relatedCondition": "الحالة المرتبطة",
+    "diagnosticReportDetails_unknownCondition": "حالة غير معروفة",
+    "diagnosticReportDetails_results": "النتائج",
+    "diagnosticReportDetails_conclusion": "الخلاصة",
+    "diagnosticReport_verificationStatus": "حالة التحقق",
+    "diagnosticReport_stage": "المرحلة",
+    "diagnosticReportDetails_notes": "ملاحظات",
+    "diagnosticReportDetails_relatedConditionSection": "الحالة المرتبطة",
+    "diagnosticReportDetails_status": "الحالة",
+    "diagnosticReportDetails_relatedEncounters": "الزيارات المرتبطة",
+    "diagnosticReportDetails_relatedServiceRequests": "طلبات الخدمة المرتبطة",
+    "diagnosticReportDetails_chronicCondition": "حالة مزمنة",
+    "diagnosticReportDetails_yes": "نعم",
+    "diagnosticReport_bodySite": "موقع الجسم",
+    "diagnosticReportDetails_no": "لا",
+    "diagnosticReport_onset_date": "تاريخ البدء",
+    "diagnosticReportDetails_recordDate": "تاريخ التسجيل",
+    "diagnosticReportDetails_summary": "ملخص",
+    "diagnosticReportDetails_additionalNotes": "ملاحظات إضافية",
+    "diagnosticReportDetails_unknownReason": "سبب غير معروف",
+    "diagnosticReportDetails_startTime": "وقت البدء",
+    "diagnosticReportDetails_endTime": "وقت الانتهاء",
+    "diagnosticReportDetails_specialArrangements": "ترتيبات خاصة",
+    "diagnosticReportDetails_encounterType": "نوع الزيارة",
+    "diagnosticReportDetails_unknownService": "خدمة غير معروفة",
+    "diagnosticReportDetails_orderDetails": "تفاصيل الطلب",
+    "diagnosticReportDetails_reason": "السبب",
+    "diagnosticReportDetails_occurrenceDate": "تاريخ الحدوث"
+  },
+  "diagnosticListAppointmentPage":{
+    "diagnosticReportListAppointment_noReportsFound": "لم يتم العثور على تقارير لهذا الموعد",
+    "diagnosticReportListAppointment_tapToRefresh": "يبدو أن لا توجد تقارير لهذا الموعد. انقر للتحديث.",
+    "diagnosticReportListAppointment_refresh": "تحديث",
+    "diagnosticReportListAppointment_unnamedReport": "تقرير غير مسمى",
+    "diagnosticReportListAppointment_note": "ملاحظة",
+    "diagnosticReportListAppointment_condition": "الحالة",
+    "diagnosticReportListAppointment_unknownCondition": "حالة غير معروفة",
+    "diagnosticReportListAppointment_clinicalStatus": "الحالة السريرية",
+    "diagnosticReportListAppointment_verificationStatus": "حالة التحقق",
+    "diagnosticReportListAppointment_bodySite": "موقع الجسم",
+    "diagnosticReportListAppointment_stage": "المرحلة",
+    "diagnosticReportListAppointment_onset_date": "تاريخ البدء",
+    "diagnosticReportListAppointment_conclusion": "الخلاصة",
+    "diagnosticReportListAppointment_reportStatus": "حالة التقرير"
+  },
+  "diagnosticFilterPage":{
+    "diagnosticReportFilter_title": "تصفية التقارير التشخيصية",
+    "diagnosticReportFilter_search": "بحث",
+    "diagnosticReportFilter_enterSearchTerm": "أدخل مصطلح البحث",
+    "diagnosticReportFilter_all": "الكل",
+    "diagnosticReportFilter_status": "الحالة",
+    "diagnosticReportFilter_clearFilters": "مسح عوامل التصفية",
+    "diagnosticReportFilter_cancel": "إلغاء",
+    "diagnosticReportFilter_apply": "تطبيق"
   }
 }
 
