--- a/assets/lang/en.json
+++ b/assets/lang/en.json
@@ -2074,8 +2074,84 @@
     "yes": "Yes",
     "no": "No",
     "notAvailable": "N/A"
+  },
+  "diagnosticReportList": {
+    "diagnosticReport_noReportsFound": "No diagnostic reports found",
+    "diagnosticReport_tapToRefresh": "It seems there are no diagnostic reports. Tap to refresh.",
+    "diagnosticReport_refresh": "Refresh",
+    "diagnosticReport_unnamedReport": "Unnamed Report",
+    "diagnosticReport_note": "Note",
+    "diagnosticReport_condition": "Condition",
+    "diagnosticReport_unknownCondition": "Unknown Condition",
+    "diagnosticReport_clinicalStatus": "Clinical Status",
+    "diagnosticReport_verificationStatus": "Verification Status",
+    "diagnosticReport_bodySite": "Body Site",
+    "diagnosticReport_stage": "Stage",
+    "diagnosticReport_onset_date": "Onset Date",
+    "diagnosticReport_conclusion": "Conclusion",
+    "diagnosticReport_reportStatus": "Report Status"
+  },
+  "diagnosticDetailsPage": {
+    "diagnosticReportDetails_pageTitle": "Diagnostic Report Details",
+    "diagnosticReportDetails_failedToLoadReport": "Failed to load report",
+    "diagnosticReportDetails_retry": "Retry",
+    "diagnosticReportDetails_unknownReport": "Unknown report",
+    "diagnosticReportDetails_overview": "Overview",
+    "diagnosticReportDetails_reportName": "Report name",
+    "diagnosticReportDetails_relatedCondition": "Related condition",
+    "diagnosticReportDetails_unknownCondition": "Unknown condition",
+    "diagnosticReportDetails_results": "Results",
+    "diagnosticReportDetails_conclusion": "Conclusion",
+    "diagnosticReportDetails_notes": "Notes",
+    "diagnosticReportDetails_relatedConditionSection": "Related condition",
+    "diagnosticReportDetails_status": "Status",
+    "diagnosticReport_verificationStatus": "Verification Status",
+    "diagnosticReportDetails_relatedEncounters": "Related encounters",
+    "diagnosticReportDetails_relatedServiceRequests": "Related service requests",
+    "diagnosticReportDetails_chronicCondition": "Chronic condition",
+    "diagnosticReportDetails_yes": "Yes",
+    "diagnosticReportDetails_no": "No",
+    "diagnosticReport_onset_date": "Onset Date",
+    "diagnosticReport_bodySite": "Body Site",
+    "diagnosticReportDetails_recordDate": "Record date",
+    "diagnosticReportDetails_summary": "Summary",
+    "diagnosticReportDetails_additionalNotes": "Additional notes",
+    "diagnosticReportDetails_unknownReason": "Unknown reason",
+    "diagnosticReportDetails_startTime": "Start time",
+    "diagnosticReportDetails_endTime": "End time",
+    "diagnosticReportDetails_specialArrangements": "Special arrangements",
+    "diagnosticReportDetails_encounterType": "Encounter type",
+    "diagnosticReportDetails_unknownService": "Unknown service",
+    "diagnosticReportDetails_orderDetails": "Order details",
+    "diagnosticReportDetails_reason": "Reason",
+    "diagnosticReportDetails_occurrenceDate": "Occurrence Date"
+  },
+  "diagnosticListAppointmentPage": {
+    "diagnosticReportListAppointment_noReportsFound": "No reports found for this appointment",
+    "diagnosticReportListAppointment_tapToRefresh": "It seems there are no reports for this appointment. Tap to refresh.",
+    "diagnosticReportListAppointment_refresh": "Refresh",
+    "diagnosticReportListAppointment_unnamedReport": "Unnamed report",
+    "diagnosticReportListAppointment_note": "Note",
+    "diagnosticReportListAppointment_condition": "Condition",
+    "diagnosticReportListAppointment_unknownCondition": "Unknown condition",
+    "diagnosticReportListAppointment_clinicalStatus": "Clinical status",
+    "diagnosticReportListAppointment_verificationStatus": "Verification status",
+    "diagnosticReportListAppointment_bodySite": "Body site",
+    "diagnosticReportListAppointment_stage": "Stage",
+    "diagnosticReportListAppointment_onset_date": "Onset date",
+    "diagnosticReportListAppointment_conclusion": "Conclusion",
+    "diagnosticReportListAppointment_reportStatus": "Report status"
+  },
+  "diagnosticFilterPage": {
+    "diagnosticReportFilter_title": "Filter Diagnostic Reports",
+    "diagnosticReportFilter_search": "Search",
+    "diagnosticReportFilter_enterSearchTerm": "Enter search term",
+    "diagnosticReportFilter_all": "All",
+    "diagnosticReportFilter_status": "Status",
+    "diagnosticReportFilter_clearFilters": "Clear Filters",
+    "diagnosticReportFilter_cancel": "Cancel",
+    "diagnosticReportFilter_apply": "Apply"
   }
-
 }
 
 
