--- a/assets/lang/ar.json
+++ b/assets/lang/ar.json
@@ -26,6 +26,7 @@
     "last_name": "الاسم الأخير",
     "email": "البريد الإلكتروني",
     "password": "كلمة المرور",
+    "newPassword": "كلمة المرور الجديدة",
     "confirm_password": "تأكيد كلمة المرور",
     "gender": "الجنس",
     "marital_status": "الحالة الاجتماعية",
